--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ejs": "^2.4.1",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "google-auth-library": "^0.9.7",
+    "googleapis": "^4.0.0",
     "jade": "~1.11.0",
     "mongoose": "^4.4.8",
     "morgan": "^1.6.1",
