--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "ejs": "^2.4.1",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "formidable": "^1.0.17",
+    "fs-extra": "^0.28.0",
     "google-auth-library": "^0.9.7",
     "googleapis": "^4.0.0",
     "jade": "~1.11.0",
     "mongoose": "^4.4.8",
     "morgan": "^1.6.1",
+    "multer": "^1.1.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "quickthumb": "0.0.12",
     "serve-favicon": "~2.3.0"
   }
 }
